--- a/src/main/resources/static/martin-platform-client/public/locales/en/m_agrolavka.json
+++ b/src/main/resources/static/martin-platform-client/public/locales/en/m_agrolavka.json
@@ -2,5 +2,8 @@
     "title": "Agrolavka",
     "agrolavka": {
         "products": "Products"
+    },
+    "products": {
+        "product_groups": "Product groups"
     }
 }
