Products data table.

--- a/src/main/resources/static/martin-platform-client/public/locales/en/m_agrolavka.json
+++ b/src/main/resources/static/martin-platform-client/public/locales/en/m_agrolavka.json
@@ -4,6 +4,8 @@
         "products": "Products"
     },
     "products": {
-        "product_groups": "Product groups"
+        "product_groups": "Product groups",
+        "product_name": "Name",
+        "product_price": "Price"
     }
 }
