--- a/src/main/resources/static/martin-platform-client/public/locales/ru/m_administrator.json
+++ b/src/main/resources/static/martin-platform-client/public/locales/ru/m_administrator.json
@@ -1,27 +1,27 @@
 {
-    "title": "Administration",
+    "title": "Администрирование",
     "administrator": {
-        "users": "Users",
-        "email_group": "Email settings",
+        "users": "Пользователи",
+        "email_group": "Настройки Email",
         "email": {
-            "emailtemplates": "Email templates"
+            "emailtemplates": "Шаблоны"
         }
     },
     "users": {
-        "fullname": "Full name",
+        "fullname": "Полное имя",
         "email": "Email",
-        "status": "Status",
-        "active": "Active",
-        "firstname": "First name",
-        "lastname": "Last name",
+        "status": "Статус",
+        "active": "Активный",
+        "firstname": "Имя",
+        "lastname": "Фамилия",
         "status_const": {
-            "ACTIVE": "Active",
-            "INACTIVE": "Inactive",
-            "REGISTRATION": "Registration"
+            "ACTIVE": "Активный",
+            "INACTIVE": "Декактивирован",
+            "REGISTRATION": "В процессе регистрации"
         }
     },
     "email_templates": {
-        "subject": "Email subject",
-        "content": "Content"
+        "subject": "Тема письма",
+        "content": "Содержание"
     }
 }
