MySklad integration: request security token on-demand.

--- a/src/main/resources/static/martin-platform-client/public/locales/en/translation.json
+++ b/src/main/resources/static/martin-platform-client/public/locales/en/translation.json
@@ -30,7 +30,9 @@
             "cancel": "Cancel",
             "clear": "Clear",
             "none": "None",
-            "today": "Today"
+            "today": "Today",
+            "select_image": "Select image",
+            "remove_image": "Remove image"
         },
         "toolbar": {
             "account": "Account"
