--- a/src/main/resources/static/martin-platform-client/public/locales/ru/translation.json
+++ b/src/main/resources/static/martin-platform-client/public/locales/ru/translation.json
@@ -30,7 +30,9 @@
             "cancel": "Отменить",
             "clear": "Очистить",
             "none": "Пусто",
-            "today": "Сегодня"
+            "today": "Сегодня",
+            "select_image": "Выбрать изображение",
+            "remove_image": "Удалить изображение"
         },
         "toolbar": {
             "account": "Аккаунт"
