--- a/src/main/resources/static/martin-platform-client/public/locales/en/m_agrolavka.json
+++ b/src/main/resources/static/martin-platform-client/public/locales/en/m_agrolavka.json
@@ -6,6 +6,7 @@
     "products": {
         "product_groups": "Product groups",
         "product_name": "Name",
-        "product_price": "Price"
+        "product_price": "Price",
+        "product_images": "Images"
     }
 }
