--- a/src/main/resources/static/martin-platform-client/public/locales/ru/m_agrolavka.json
+++ b/src/main/resources/static/martin-platform-client/public/locales/ru/m_agrolavka.json
@@ -7,6 +7,7 @@
         "product_groups": "Категория товара",
         "product_name": "Название",
         "product_price": "Отпускная цена",
-        "product_images": "Изображения"
+        "product_images": "Изображения",
+        "all_product_groups": "Все группы"
     }
 }
