--- a/src/main/resources/static/martin-platform-client/public/locales/en/m_agrolavka.json
+++ b/src/main/resources/static/martin-platform-client/public/locales/en/m_agrolavka.json
@@ -7,6 +7,7 @@
         "product_groups": "Product groups",
         "product_name": "Name",
         "product_price": "Price",
-        "product_images": "Images"
+        "product_images": "Images",
+        "all_product_groups": "All"
     }
 }
