--- a/src/main/resources/static/martin-platform-client/public/locales/ru/m_agrolavka.json
+++ b/src/main/resources/static/martin-platform-client/public/locales/ru/m_agrolavka.json
@@ -8,6 +8,6 @@
         "product_name": "Название",
         "product_price": "Отпускная цена",
         "product_images": "Изображения",
-        "all_product_groups": "Все группы"
+        "all_product_groups": "Все"
     }
 }
