--- a/src/main/resources/static/martin-platform-client/public/locales/ru/translation.json
+++ b/src/main/resources/static/martin-platform-client/public/locales/ru/translation.json
@@ -19,7 +19,8 @@
             "cancel": "Отменить",
             "dense_padding": "Компактное представление",
             "confirm_delete_message": "Вы действительно хотите удалить запись?",
-            "no_data": "Нет данных"
+            "no_data": "Нет данных",
+            "filters": "Фильтры"
         },
         "menu": {
             "close": "Закрыть",
