--- a/src/main/resources/static/martin-platform-client/public/locales/en/m_agrolavka.json
+++ b/src/main/resources/static/martin-platform-client/public/locales/en/m_agrolavka.json
@@ -7,7 +7,9 @@
         "product_groups": "Product groups",
         "product_name": "Name",
         "product_price": "Price",
+        "product_buy_price": "Buy price",
         "product_images": "Images",
-        "all_product_groups": "All"
+        "all_product_groups": "All",
+        "product_article": "Article"
     }
 }
