--- a/src/main/resources/static/martin-platform-client/public/locales/ru/m_agrolavka.json
+++ b/src/main/resources/static/martin-platform-client/public/locales/ru/m_agrolavka.json
@@ -10,6 +10,7 @@
         "product_buy_price": "Закупочная цена",
         "product_images": "Изображения",
         "all_product_groups": "Все",
-        "product_article": "Артикул"
+        "product_article": "Артикул",
+        "synchronize": "Синхонизировать данные c программой Мой Склад"
     }
 }
