--- a/src/main/resources/static/martin-platform-client/public/locales/en/m_agrolavka.json
+++ b/src/main/resources/static/martin-platform-client/public/locales/en/m_agrolavka.json
@@ -11,6 +11,7 @@
         "product_images": "Images",
         "all_product_groups": "All",
         "product_article": "Article",
+        "product_description": "Description",
         "synchronize": "Synchronize MySklad data"
     }
 }
