--- a/src/main/resources/static/martin-platform-client/public/locales/ru/m_agrolavka.json
+++ b/src/main/resources/static/martin-platform-client/public/locales/ru/m_agrolavka.json
@@ -11,6 +11,7 @@
         "product_images": "Изображения",
         "all_product_groups": "Все",
         "product_article": "Артикул",
+        "product_description": "Описание",
         "synchronize": "Синхонизировать данные c программой Мой Склад"
     }
 }
