--- a/src/main/resources/static/martin-platform-client/public/locales/ru/m_agrolavka.json
+++ b/src/main/resources/static/martin-platform-client/public/locales/ru/m_agrolavka.json
@@ -12,6 +12,7 @@
         "all_product_groups": "Все",
         "product_article": "Артикул",
         "product_description": "Описание",
+        "product_code": "Код товара",
         "synchronize": "Синхонизировать данные c программой Мой Склад"
     }
 }
