Product groups CRUD operations.

--- a/src/main/resources/static/martin-platform-client/public/locales/en/m_agrolavka.json
+++ b/src/main/resources/static/martin-platform-client/public/locales/en/m_agrolavka.json
@@ -14,5 +14,8 @@
         "product_description": "Description",
         "product_code": "Code",
         "synchronize": "Synchronize MySklad data"
+    },
+    "products_group": {
+        "new_group": "Create new product group"
     }
 }
