--- a/src/main/resources/static/martin-platform-client/public/locales/ru/m_agrolavka.json
+++ b/src/main/resources/static/martin-platform-client/public/locales/ru/m_agrolavka.json
@@ -14,5 +14,8 @@
         "product_description": "Описание",
         "product_code": "Код товара",
         "synchronize": "Синхонизировать данные c программой Мой Склад"
+    },
+    "products_group": {
+        "new_group": "Создать новую группу товаров"
     }
 }
