Product groups CRUD operations.

--- a/src/main/resources/static/martin-platform-client/public/locales/en/m_agrolavka.json
+++ b/src/main/resources/static/martin-platform-client/public/locales/en/m_agrolavka.json
@@ -16,6 +16,8 @@
         "synchronize": "Synchronize MySklad data"
     },
     "products_group": {
-        "new_group": "Create new product group"
+        "new_group": "Create new product group",
+        "edit_group": "Edit",
+        "delete_group": "Delete"
     }
 }
