--- a/src/main/resources/static/martin-platform-client/public/locales/ru/m_agrolavka.json
+++ b/src/main/resources/static/martin-platform-client/public/locales/ru/m_agrolavka.json
@@ -16,6 +16,8 @@
         "synchronize": "Синхонизировать данные c программой Мой Склад"
     },
     "products_group": {
-        "new_group": "Создать новую группу товаров"
+        "new_group": "Создать новую группу товаров",
+        "edit_group": "Редактировать",
+        "delete_group": "Удалить"
     }
 }
