--- a/src/main/resources/static/martin-platform-client/public/locales/ru/m_agrolavka.json
+++ b/src/main/resources/static/martin-platform-client/public/locales/ru/m_agrolavka.json
@@ -15,9 +15,10 @@
         "product_code": "Код товара",
         "synchronize": "Синхонизировать данные c программой Мой Склад"
     },
-    "products_group": {
+    "products_groups": {
         "new_group": "Создать новую группу товаров",
         "edit_group": "Редактировать",
-        "delete_group": "Удалить"
+        "delete_group": "Удалить",
+        "product_group_name": "Название"
     }
 }
