--- a/src/main/resources/static/martin-platform-client/public/locales/ru/m_agrolavka.json
+++ b/src/main/resources/static/martin-platform-client/public/locales/ru/m_agrolavka.json
@@ -19,6 +19,7 @@
         "new_group": "Создать новую группу товаров",
         "edit_group": "Редактировать",
         "delete_group": "Удалить",
-        "product_group_name": "Название"
+        "product_group_name": "Название",
+        "product_group_top_category": "Показать в тулбаре"
     }
 }
