--- a/src/main/resources/static/martin-platform-client/public/locales/ru/m_agrolavka.json
+++ b/src/main/resources/static/martin-platform-client/public/locales/ru/m_agrolavka.json
@@ -20,6 +20,7 @@
         "edit_group": "Редактировать",
         "delete_group": "Удалить",
         "product_group_name": "Название",
-        "product_group_top_category": "Показать в тулбаре"
+        "product_group_top_category": "Показать в тулбаре",
+        "product_group_fa_icon": "Font Awesome иконка"
     }
 }
