--- a/src/main/resources/static/martin-platform-client/public/locales/en/m_agrolavka.json
+++ b/src/main/resources/static/martin-platform-client/public/locales/en/m_agrolavka.json
@@ -1,7 +1,8 @@
 {
     "title": "Agrolavka",
     "agrolavka": {
-        "products": "Products"
+        "products": "Products",
+        "orders": "Orders"
     },
     "products": {
         "product_groups": "Product groups",
