--- a/src/main/resources/static/martin-platform-client/public/locales/ru/m_agrolavka.json
+++ b/src/main/resources/static/martin-platform-client/public/locales/ru/m_agrolavka.json
@@ -1,7 +1,8 @@
 {
     "title": "Agrolavka",
     "agrolavka": {
-        "products": "Товары"
+        "products": "Товары",
+        "orders": "Заказы"
     },
     "products": {
         "product_groups": "Категория товара",
