--- a/src/main/resources/static/martin-platform-client/public/locales/ru/m_agrolavka.json
+++ b/src/main/resources/static/martin-platform-client/public/locales/ru/m_agrolavka.json
@@ -31,6 +31,9 @@
     },
     "orders": {
         "order_number": "Номер",
-        "mobile_phone": "Мобильный телефон"
+        "mobile_phone": "Мобильный телефон",
+        "address": "Адрес",
+        "enable_notifications": "Включить уведомления",
+        "enable_notifications_success": "Уведомления включены"
     }
 }
