--- a/src/main/resources/static/martin-platform-client/public/locales/en/m_agrolavka.json
+++ b/src/main/resources/static/martin-platform-client/public/locales/en/m_agrolavka.json
@@ -35,6 +35,7 @@
         "address": "Address",
         "enable_notifications": "Enable notifications",
         "enable_notifications_success": "Notifications have been enabled!",
-        "disable_notifications": "Notifications have been turned off"
+        "disable_notifications": "Notifications have been turned off",
+        "order_total": "Total sum"
     }
 }
