--- a/src/main/resources/static/martin-platform-client/public/locales/ru/m_agrolavka.json
+++ b/src/main/resources/static/martin-platform-client/public/locales/ru/m_agrolavka.json
@@ -35,6 +35,7 @@
         "address": "Адрес",
         "enable_notifications": "Включить уведомления",
         "enable_notifications_success": "Уведомления включены",
-        "disable_notifications": "Выключить уведомления"
+        "disable_notifications": "Выключить уведомления",
+        "order_total": "Сумма"
     }
 }
