--- a/src/main/resources/static/martin-platform-client/public/locales/ru/m_agrolavka.json
+++ b/src/main/resources/static/martin-platform-client/public/locales/ru/m_agrolavka.json
@@ -37,5 +37,8 @@
         "enable_notifications_success": "Уведомления включены",
         "disable_notifications": "Выключить уведомления",
         "order_total": "Сумма"
+    },
+    "order": {
+        "title": "Заказ № {{num}}"
     }
 }
