--- a/src/main/resources/static/martin-platform-client/public/locales/en/m_agrolavka.json
+++ b/src/main/resources/static/martin-platform-client/public/locales/en/m_agrolavka.json
@@ -37,5 +37,8 @@
         "enable_notifications_success": "Notifications have been enabled!",
         "disable_notifications": "Notifications have been turned off",
         "order_total": "Total sum"
+    },
+    "order": {
+        "title": "Order # {{num}}"
     }
 }
