--- a/src/main/resources/static/martin-platform-client/public/locales/en/m_agrolavka.json
+++ b/src/main/resources/static/martin-platform-client/public/locales/en/m_agrolavka.json
@@ -47,6 +47,13 @@
             "APPROVED": "Approved",
             "DELIVERY": "Delivery",
             "CLOSED": "Closed"
+        },
+        "positions": "Positions",
+        "position": {
+            "name": "Name",
+            "quantity": "Quantity",
+            "price": "Price",
+            "subtotal": "Subtotal"
         }
     }
 }
