--- a/src/main/resources/static/martin-platform-client/public/locales/ru/m_agrolavka.json
+++ b/src/main/resources/static/martin-platform-client/public/locales/ru/m_agrolavka.json
@@ -47,6 +47,13 @@
             "APPROVED": "Подтвержден",
             "DELIVERY": "В процессе доставки",
             "CLOSED": "Закрыт"
+        },
+        "positions": "Корзина покупателя",
+        "position": {
+            "name": "Наименование",
+            "quantity": "Количество",
+            "price": "Цена",
+            "subtotal": "Сумма"
         }
     }
 }
