--- a/src/main/resources/static/martin-platform-client/public/locales/en/m_agrolavka.json
+++ b/src/main/resources/static/martin-platform-client/public/locales/en/m_agrolavka.json
@@ -54,6 +54,7 @@
             "quantity": "Quantity",
             "price": "Price",
             "subtotal": "Subtotal"
-        }
+        },
+        "close": "Close"
     }
 }
