--- a/src/main/resources/static/martin-platform-client/public/locales/ru/m_agrolavka.json
+++ b/src/main/resources/static/martin-platform-client/public/locales/ru/m_agrolavka.json
@@ -54,6 +54,7 @@
             "quantity": "Количество",
             "price": "Цена",
             "subtotal": "Сумма"
-        }
+        },
+        "close": "Закрыть"
     }
 }
