--- a/src/main/resources/static/martin-platform-client/public/locales/en/m_agrolavka.json
+++ b/src/main/resources/static/martin-platform-client/public/locales/en/m_agrolavka.json
@@ -55,6 +55,7 @@
             "price": "Price",
             "subtotal": "Subtotal"
         },
-        "close": "Close"
+        "close": "Close",
+        "total": "Total"
     }
 }
