--- a/src/main/resources/static/martin-platform-client/public/locales/ru/m_agrolavka.json
+++ b/src/main/resources/static/martin-platform-client/public/locales/ru/m_agrolavka.json
@@ -55,6 +55,7 @@
             "price": "Цена",
             "subtotal": "Сумма"
         },
-        "close": "Закрыть"
+        "close": "Закрыть",
+        "total": "Общая сумма"
     }
 }
