--- a/src/main/resources/static/martin-platform-client/public/locales/ru/translation.json
+++ b/src/main/resources/static/martin-platform-client/public/locales/ru/translation.json
@@ -63,7 +63,9 @@
                 }
             },
             "applications": "Приложения",
-            "logout": "Выход из системы"
+            "logout": "Выход из системы",
+            "update": "Обновить приложение",
+            "update_success": "Приложение было успешно обновлено!"
         },
         "finish_registration": {
             "title": "Пожалуйста, закончите вашу регистрацию",
