--- a/src/main/resources/static/martin-platform-client/public/locales/ru/m_administrator.json
+++ b/src/main/resources/static/martin-platform-client/public/locales/ru/m_administrator.json
@@ -18,7 +18,8 @@
             "ACTIVE": "Активный",
             "INACTIVE": "Декактивирован",
             "REGISTRATION": "В процессе регистрации"
-        }
+        },
+        "open_registration_link": "Открыть ссылку регистрации"
     },
     "email_templates": {
         "subject": "Тема письма",
