--- a/src/main/resources/static/admin/public/locales/ru/translation.json
+++ b/src/main/resources/static/admin/public/locales/ru/translation.json
@@ -42,7 +42,8 @@
             "title": "Добро пожаловать",
             "sign_in": "Войти в систему",
             "username": "Адрес электронной почты",
-            "password": "Пароль"
+            "password": "Пароль",
+            "login_fail": "Неверный логин или пароль"
         },
         "account_menu": {
             "profile": "Мой профиль",
