--- a/src/main/resources/static/admin/public/locales/ru/m_agrolavka.json
+++ b/src/main/resources/static/admin/public/locales/ru/m_agrolavka.json
@@ -27,7 +27,8 @@
         "product_group_fa_icon": "Font Awesome иконка",
         "product_group_description": "Описание",
         "product_group_seo_title": "Название страницы категории товаров на сайте (SEO)",
-        "product_group_seo_description": "Описание страницы категории товаров на сайте (SEO)"
+        "product_group_seo_description": "Описание страницы категории товаров на сайте (SEO)",
+        "image": "Изображение"
     },
     "orders": {
         "order_number": "Номер",
