--- a/src/main/resources/static/admin/public/locales/en/m_agrolavka.json
+++ b/src/main/resources/static/admin/public/locales/en/m_agrolavka.json
@@ -28,7 +28,8 @@
         "product_group_description": "Description",
         "product_group_seo_title": "SEO and site page title",
         "product_group_seo_description": "SEO meta description content",
-        "image": "Photo"
+        "image": "Photo",
+        "normalize": "Normalize product groups"
     },
     "orders": {
         "order_number": "Order Nr.",
