--- a/src/main/resources/static/admin/public/locales/en/m_agrolavka.json
+++ b/src/main/resources/static/admin/public/locales/en/m_agrolavka.json
@@ -2,7 +2,8 @@
     "title": "Agrolavka",
     "agrolavka": {
         "products": "Products",
-        "orders": "Orders"
+        "orders": "Orders",
+        "sandbox": "Sandbox"
     },
     "products": {
         "product_groups": "Product groups",
