--- a/src/main/resources/static/admin/public/locales/en/translation.json
+++ b/src/main/resources/static/admin/public/locales/en/translation.json
@@ -75,6 +75,20 @@
             "password_length": "At least 8 characters",
             "password_not_match": "Passwords are not match",
             "submit": "Finish registration"
+        },
+        "htmleditor": {
+            "toolbar": {
+                "source_code": "Source code",
+                "headers": "Headers",
+                "header": {
+                    "h1": "Header 1",
+                    "h2": "Header 2",
+                    "h3": "Header 3",
+                    "h4": "Header 4",
+                    "h5": "Header 5",
+                    "h6": "Header 6"
+                }
+            }
         }
     },
     "validation": {
