--- a/src/main/resources/static/admin/public/locales/en/translation.json
+++ b/src/main/resources/static/admin/public/locales/en/translation.json
@@ -77,8 +77,8 @@
             "submit": "Finish registration"
         },
         "htmleditor": {
-            "toolbar": {
-                "source_code": "Source code",
+            "context_menu": {
+                "back": "Back",
                 "headers": "Headers",
                 "header": {
                     "h1": "Header 1",
