--- a/src/main/resources/static/admin/public/locales/en/translation.json
+++ b/src/main/resources/static/admin/public/locales/en/translation.json
@@ -87,6 +87,10 @@
                     "h4": "Header 4",
                     "h5": "Header 5",
                     "h6": "Header 6"
+                },
+                "action": {
+                    "edit": "Edit",
+                    "delete": "Remove"
                 }
             }
         }
