--- a/src/main/resources/static/admin/public/locales/en/translation.json
+++ b/src/main/resources/static/admin/public/locales/en/translation.json
@@ -80,6 +80,7 @@
             "context_menu": {
                 "back": "Back",
                 "headers": "Headers",
+                "texts": "Text",
                 "header": {
                     "h1": "Header 1",
                     "h2": "Header 2",
@@ -87,6 +88,10 @@
                     "h4": "Header 4",
                     "h5": "Header 5",
                     "h6": "Header 6"
+                },
+                "text": {
+                    "p": "Paragraph",
+                    "span": "Text"
                 },
                 "action": {
                     "edit": "Edit",
