HTML editor: colors.

--- a/src/main/resources/static/admin/public/locales/en/translation.json
+++ b/src/main/resources/static/admin/public/locales/en/translation.json
@@ -97,6 +97,9 @@
                     "edit": "Edit",
                     "delete": "Remove"
                 }
+            },
+            "toolbar": {
+                "colors": "Colors"
             }
         }
     },
