HTML editor: colors.

--- a/src/main/resources/static/admin/public/locales/en/translation.json
+++ b/src/main/resources/static/admin/public/locales/en/translation.json
@@ -99,7 +99,10 @@
                 }
             },
             "toolbar": {
-                "colors": "Colors"
+                "colors": "Colors",
+                "content": {
+                    "link": "Insert link"
+                }
             }
         }
     },
