HTML editor: textbox.

--- a/src/main/resources/static/admin/public/locales/en/translation.json
+++ b/src/main/resources/static/admin/public/locales/en/translation.json
@@ -101,6 +101,7 @@
             "toolbar": {
                 "colors": "Colors",
                 "content": {
+                    "text": "Format text",
                     "link": "Insert link"
                 }
             }
