--- a/src/main/resources/static/admin/public/locales/en/translation.json
+++ b/src/main/resources/static/admin/public/locales/en/translation.json
@@ -103,6 +103,12 @@
                 "content": {
                     "text": "Format text",
                     "link": "Insert link"
+                },
+                "text_alignment": {
+                    "left": "Left",
+                    "center": "Center",
+                    "right": "Right",
+                    "justify": "Justify"
                 }
             }
         }
