--- a/src/main/resources/static/admin/public/locales/ru/m_agrolavka.json
+++ b/src/main/resources/static/admin/public/locales/ru/m_agrolavka.json
@@ -60,6 +60,8 @@
             "subtotal": "Сумма"
         },
         "close": "Закрыть",
-        "total": "Общая сумма"
+        "total": "Общая сумма",
+        "nostatus": "Не выбран",
+        "search_text": "Поиск..."
     }
 }
