--- a/src/main/resources/static/admin/public/locales/en/m_agrolavka.json
+++ b/src/main/resources/static/admin/public/locales/en/m_agrolavka.json
@@ -60,6 +60,8 @@
             "subtotal": "Subtotal"
         },
         "close": "Close",
-        "total": "Total"
+        "total": "Total",
+        "nostatus": "None",
+        "search_text": "Search..."
     }
 }
