Orders: show archive.

--- a/src/main/resources/static/admin/public/locales/en/m_agrolavka.json
+++ b/src/main/resources/static/admin/public/locales/en/m_agrolavka.json
@@ -62,6 +62,7 @@
         "close": "Close",
         "total": "Total",
         "nostatus": "None",
-        "search_text": "Search..."
+        "search_text": "Search...",
+        "show_archive": "Show archive"
     }
 }
