--- a/src/main/resources/static/admin/public/locales/ru/m_agrolavka.json
+++ b/src/main/resources/static/admin/public/locales/ru/m_agrolavka.json
@@ -62,6 +62,7 @@
         "close": "Закрыть",
         "total": "Общая сумма",
         "nostatus": "Не выбран",
-        "search_text": "Поиск..."
+        "search_text": "Поиск...",
+        "show_archive": "Архив"
     }
 }
