--- a/src/main/resources/static/admin/public/locales/ru/m_agrolavka.json
+++ b/src/main/resources/static/admin/public/locales/ru/m_agrolavka.json
@@ -65,7 +65,9 @@
         "total": "Общая сумма",
         "nostatus": "Не выбран",
         "search_text": "Поиск...",
-        "show_archive": "Архив"
+        "show_archive": "Архив",
+        "contacts": "Контактные данные",
+        "comment": "Комментарий к заказу"
     },
     "backup": "Сделать резервную копию всех данных"
 }
